--- a/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.html
+++ b/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.html
@@ -3,6 +3,16 @@
   <input type="number" [(ngModel)]="edadBusqueda" placeholder="Edad..." (input)="filtrarReportes()">
   <input type="text" [(ngModel)]="lugarBusqueda" placeholder="Lugar de desaparición..." (input)="filtrarReportes()">
   <input type="date" [max]="fechaMaxima" [(ngModel)]="fechaBusqueda" (input)="filtrarReportes()" id="fecha">
+  
+  <select [(ngModel)]="autorFiltro" (change)="filtrarReportes()">
+    <option value="todos">Todos los reportes</option>
+    <option value="mios">Mis reportes</option>
+  </select>
+  <select [(ngModel)]="estadoFiltro" (change)="filtrarReportes()">
+    <option value="activos">Activos</option>
+    <option value="archivados">Archivados</option>
+  </select>
+  
   <button class="btn-limpiar" (click)="limpiarFiltros()">Limpiar filtros</button>
 </div>
 
