Obtener todas las coordenadas para proximamente realizar el mapa de calor

--- a/SistemaDesaparecidos/src/app/components/header/header.component.html
+++ b/SistemaDesaparecidos/src/app/components/header/header.component.html
@@ -14,6 +14,7 @@
             <li><a routerLink="/registro">Registrarse</a></li>
             <li><a routerLink="/iniciar-sesion">Iniciar Sesión</a></li>
         </ng-container>
+        <li><a routerLink="/estadisticas">Estadísticas</a></li>
         <ng-container *ngIf="estaLogueado">
             <li><a routerLink="/perfil">Perfil</a></li>
             <li><a (click)="cerrarSesion()">Cerrar Sesión</a></li>
